--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #1D4221;
+    background-image: linear-gradient(to bottom right, rgb(43, 255, 0), rgb(0, 110, 255));
     color: white;
     font-family: "Bai Jamjuree", sans-serif;
     display: flex;
@@ -23,7 +23,12 @@ button {
     display:block;
 }
 .passo.ativo img{
-    max-height: 80%;
+    max-height: 50%;
+    max-width: 50%;
+    height: 500px;
+    width: auto;
+    
+
 }
 
 main {
